--- a/ENV FOR HOSTING.env
+++ b/ENV FOR HOSTING.env
@@ -1,24 +1,21 @@
+# ALL FIELDS THAT HAVE (#) ARE FILLABLES
+
+# Application
 APP_NAME=SOIS|Accomplishment-Report
 APP_ENV=local
 APP_KEY=##################
 APP_DEBUG=true
 APP_URL=##################
 
-LOG_CHANNEL=stack
-LOG_LEVEL=debug
-
+# Database (CHECK DATABASE,USER,PASS)
 DB_CONNECTION=mysql
-
-# HOSTINGER DATABASE
-# CHECK DATABASE,USER,PASS
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=##################
 DB_USERNAME=##################
 DB_PASSWORD=##################
 
-# MAILER HOSTINGER SETTINGS
-# CHECK USER,PASS,HOST,PORT,ENCRYPTION
+# Mailer (CHECK USER,PASS,HOST,PORT,ENCRYPTION)
 MAIL_MAILER=smtp
 MAIL_HOST=##################
 MAIL_PORT=##################
@@ -28,9 +25,15 @@ MAIL_ENCRYPTION=##################
 MAIL_FROM_ADDRESS=##################
 MAIL_FROM_NAME="SOIS: Accomplishment Report"
 
+QUEUE_CONNECTION=sync
+
+# #######################
+# Not used ENV Attributes
+LOG_CHANNEL=stack
+LOG_LEVEL=debug
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
