--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/ui": "^3.2",
         "maatwebsite/excel": "^3.1",
         "nicolaslopezj/searchable": "1.*",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "spatie/laravel-backup": "^6.16"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
