downgrade spatie/laravel-backup
downgrade to prevent php and laravel version issues

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "maatwebsite/excel": "^3.1",
         "nicolaslopezj/searchable": "1.*",
         "phpunit/phpunit": "^9.5",
-        "spatie/laravel-backup": "^6.16"
+        "spatie/laravel-backup": "6.*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
