--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
         "maatwebsite/excel": "^3.1",
+        "madnest/madzipper": "1.1",
         "nicolaslopezj/searchable": "1.*",
         "phpunit/phpunit": "^9.5",
         "spatie/laravel-backup": "6.*"
